Thu Dec  4 21:50:07 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/drb/drb.rb (DRb::DRbMessage::send_request, send_reply):
	  should rescue errors and re-raise DRbConnError on write too.
	  [ruby-dev:22132]

Thu Dec  4 16:41:17 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (exc_list): allow expanding list.  [ruby-dev:22134]

Thu Dec  4 14:09:24 2003  Minero Aoki  <aamine@loveruby.net>

	* test/fileutils/test_fileutils.rb (test_cp): test if the error is
	  kind of SystemCallError.  It is needless details that which errno
	  is set on each systems.

Thu Dec  4 13:24:13 2003  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/monitor.rb: use Object#__send__ instead of Object#send.

Thu Dec  4 13:17:45 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/soap/streamHandler.rb: support latest released version of
	  http-access2.

Thu Dec  4 13:04:44 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/soap/soap.rb: add SOAP::Env module for environment repository
	  such as HTTP_PROXY.

	* lib/soap/property.rb: property implementation.

	* lib/soap/streamHandler.rb, lib/soap/wsdlDriver.rb,
	  lib/soap/rpc/driver.rb: use soap/property.rb.

	* lib/wsdl/importer.rb, lib/soap/wsdlDriver.rb, lib/soap/rpc/driver.rb:
	  use SOAP::Env.

	* lib/soap/netHttpClient.rb: add basic_auth, ssl_config, and cookie
	  management interface, but ignored for now.

	* lib/xsd/charset.rb: add XSD::Charset.encoding= interface to set
	  wiredump charset explicitly.  it was fixed to 'utf-8' when iconv or
	  uconv module was found.

Thu Dec  4 10:43:58 2003  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/sym.c (rb_dlsym_guardcall): __declspec(noinline) is VC7
	  feature.

Thu Dec  4 10:27:12 2003  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: update hyperlink to the Japanese document.

Thu Dec  4 09:12:43 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.c (asn1time_to_time): should check that
	  the underlying value of ASN1_TIME isn't NULL. [ruby-core:01881]